--- a/遊戲側錄工具/架構說明網頁.html
+++ b/遊戲側錄工具/架構說明網頁.html
@@ -616,7 +616,7 @@ graph TD
 
             <h3>系統實際截圖</h3>
             <div class="media-container">
-                <img src="gameDump_extension_screenShot.png" alt="Game Dump Extension 截圖">
+                <img src="gameDump_extension_screenShot.png" alt="Game Dump Extension 截圖" style="width: 70%; max-width: 70%;">
                 <p class="media-caption">Game Dump Extension Chrome 擴展介面</p>
             </div>
         </div>
@@ -1111,7 +1111,7 @@ flowchart TD
             
             <h3>PostgreSQL 資料庫概覽</h3>
             <div class="media-container">
-                <img src="postgreSQL_DB.png" alt="PostgreSQL 資料庫結構">
+                <img src="postgreSQL_DB.png" alt="PostgreSQL 資料庫結構" style="width: 50%; max-width: 50%;">
                 <p class="media-caption">PostgreSQL 資料庫整體架構</p>
             </div>
             
@@ -1352,8 +1352,8 @@ graph TD
             <h2><span class="icon">🎬</span>系統演示影片</h2>
             <div class="media-container">
                 <video controls>
-                    <source src="gameDump.mov" type="video/quicktime">
-                    <source src="gameDump.mov" type="video/mp4">
+                    <source src="gameDump.mp4" type="video/quicktime">
+                    <source src="gameDump.mp4" type="video/mp4">
                     您的瀏覽器不支援影片播放。
                 </video>
                 <p class="media-caption">Game Dump 工具完整操作演示</p>
