--- a/index.html
+++ b/index.html
@@ -211,6 +211,15 @@
         </ul>
     </div>
 
+    <div class="section">
+        <h2>🤖 AI Pipeline 視覺化</h2>
+        <ul class="file-list">
+            <li class="file-item"><a href="AI製程/concept-art-generator/frontend/pipeline_mindmap.html" target="_blank">原 Pixi 心智圖</a></li>
+            <li class="file-item"><a href="g6_mindmap.html" target="_blank">G6 版 Mind Map (新)</a></li>
+            <li class="file-item"><a href="slot_game_ai_agent_pipeline.html" target="_blank">Pipeline 文件 (文字版)</a></li>
+        </ul>
+    </div>
+
     <div class="footer">
         <p>© 2025 專案報告系統 | 生成時間: 2025年9月30日</p>
         <p>點擊任何連結以查看詳細報告內容</p>
